setting: java version 21 -> 17